base/spegel/spegelArgoApp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${SPEGEL_NAMESPACE}
  labels:
    initial-deploy-with-kubectl: "true"
